--- a/styles/style.css
+++ b/styles/style.css
@@ -64,8 +64,9 @@
 }
 
 .card img {
-    width: 100%;
-    border-radius: 5px;
+    width: 130%;
+     height: 330px;
+    border-radius: 10px;
 }
 
 .card p {
