--- a/styles/style.css
+++ b/styles/style.css
@@ -70,9 +70,10 @@
 }
 
 .card p {
-    margin-top: 10px;
+    margin-top: 23px;
+    margin-left: 50px; 
     font-weight: bold;
-    font-size: 14px;
+    font-size: 15px;
 }
 /* ===========================
    FOOTER PROFESIONAL
